# superpowered-wrapper

./: README.md
SuperpoweredDemo/: build.gradle  settings.gradle
SuperpoweredDemo/app/: build.gradle
SuperpoweredDemo/app/src/main/: AndroidManifest.xml
SuperpoweredDemo/app/src/main/java/org/at/sp/demo/: MainActivity.kt
SuperpoweredDemo/app/src/main/res/layout/: activity_main.xml
SuperpoweredDemo/app/src/main/res/values/: strings.xml
SuperpoweredDemo/gradle/wrapper/: gradle-wrapper.properties
SuperpoweredWrapper/: build.gradle  settings.gradle
SuperpoweredWrapper/gradle/wrapper/: gradle-wrapper.properties
SuperpoweredWrapper/sp-wrapper-lib/: build.gradle
SuperpoweredWrapper/sp-wrapper-lib/src/main/: AndroidManifest.xml
SuperpoweredWrapper/sp-wrapper-lib/src/main/java/org/at/sp/: SPPlayerWrapper.kt  SPRecorderWrapper.kt
SuperpoweredWrapper/sp-wrapper-lib/src/main/jni/: CMakeLists.txt  SPPlayer.cpp  SPPlayer.h  SPRecorder.cpp  SPRecorder.h  _interface.cpp
SuperpoweredWrapper/sp-wrapper-lib/src/main/jni/base/: SPAction.h  SPSharedVariables.cpp  SPSharedVariables.h  SPState.h
SuperpoweredWrapper/sp-wrapper-lib/src/main/res/values/: strings.xml
